updated projects, added favicon, minor design changes

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ html {
 
 body {
   overflow-x: hidden;
+  background: #002333;
 }
 
 ::-webkit-scrollbar {
@@ -56,6 +57,8 @@ header nav {
           align-items: center;
   font-family: "Roboto", sans-serif;
   min-height: 8vh;
+  -webkit-animation: nav-links 0.5s;
+          animation: nav-links 0.5s;
 }
 
 header nav .logo {
@@ -88,12 +91,21 @@ header nav .links a {
   color: #f9f9f9;
   text-decoration: none;
   letter-spacing: 2px;
+  display: inline-block;
 }
 
-header nav .links a:hover {
-  color: #02ff74;
-  -webkit-transition: 0.5s ease;
-  transition: 0.5s ease;
+header nav .links .link::after {
+  content: "";
+  display: block;
+  width: 0;
+  height: 2px;
+  background: #02ff74;
+  -webkit-transition: width 0.3s;
+  transition: width 0.3s;
+}
+
+header nav .links .link:hover::after {
+  width: 100%;
 }
 
 header nav .hamburger-menu {
@@ -108,154 +120,6 @@ header nav .hamburger-menu div {
   width: 25px;
   height: 3px;
   margin: 5px;
-}
-
-header .background {
-  background: #002333;
-  width: 100%;
-  height: 100vh;
-}
-
-header .squares {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-}
-
-header .squares li {
-  position: absolute;
-  display: block;
-  list-style: none;
-  width: 20px;
-  height: 20px;
-  background: rgba(255, 255, 255, 0.2);
-  -webkit-animation: animate 25s linear infinite;
-          animation: animate 25s linear infinite;
-  bottom: -150px;
-}
-
-header .squares li:nth-child(1) {
-  left: 25%;
-  width: 80px;
-  height: 80px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-}
-
-header .squares li:nth-child(2) {
-  left: 10%;
-  width: 20px;
-  height: 20px;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-  -webkit-animation-duration: 12s;
-          animation-duration: 12s;
-}
-
-header .squares li:nth-child(3) {
-  left: 70%;
-  width: 20px;
-  height: 20px;
-  -webkit-animation-delay: 4s;
-          animation-delay: 4s;
-}
-
-header .squares li:nth-child(4) {
-  left: 40%;
-  width: 60px;
-  height: 60px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-  -webkit-animation-duration: 18s;
-          animation-duration: 18s;
-}
-
-header .squares li:nth-child(5) {
-  left: 65%;
-  width: 20px;
-  height: 20px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-}
-
-header .squares li:nth-child(6) {
-  left: 75%;
-  width: 110px;
-  height: 110px;
-  -webkit-animation-delay: 3s;
-          animation-delay: 3s;
-}
-
-header .squares li:nth-child(7) {
-  left: 35%;
-  width: 150px;
-  height: 150px;
-  -webkit-animation-delay: 7s;
-          animation-delay: 7s;
-}
-
-header .squares li:nth-child(8) {
-  left: 50%;
-  width: 25px;
-  height: 25px;
-  -webkit-animation-delay: 15s;
-          animation-delay: 15s;
-  -webkit-animation-duration: 45s;
-          animation-duration: 45s;
-}
-
-header .squares li:nth-child(9) {
-  left: 20%;
-  width: 15px;
-  height: 15px;
-  -webkit-animation-delay: 2s;
-          animation-delay: 2s;
-  -webkit-animation-duration: 35s;
-          animation-duration: 35s;
-}
-
-header .squares li:nth-child(10) {
-  left: 85%;
-  width: 150px;
-  height: 150px;
-  -webkit-animation-delay: 0s;
-          animation-delay: 0s;
-  -webkit-animation-duration: 11s;
-          animation-duration: 11s;
-}
-
-@-webkit-keyframes animate {
-  0% {
-    -webkit-transform: translateY(0) rotate(0deg);
-            transform: translateY(0) rotate(0deg);
-    opacity: 1;
-    border-radius: 0;
-  }
-  100% {
-    -webkit-transform: translateY(-1000px) rotate(720deg);
-            transform: translateY(-1000px) rotate(720deg);
-    opacity: 0;
-    border-radius: 50%;
-  }
-}
-
-@keyframes animate {
-  0% {
-    -webkit-transform: translateY(0) rotate(0deg);
-            transform: translateY(0) rotate(0deg);
-    opacity: 1;
-    border-radius: 0;
-  }
-  100% {
-    -webkit-transform: translateY(-1000px) rotate(720deg);
-            transform: translateY(-1000px) rotate(720deg);
-    opacity: 0;
-    border-radius: 50%;
-  }
 }
 
 header .hero {
@@ -340,6 +204,8 @@ header .socials {
   top: 62%;
   position: absolute;
   left: -8.5rem;
+  -webkit-animation: social-links 0.5s;
+          animation: social-links 0.5s;
 }
 
 header .socials ul {
@@ -586,14 +452,26 @@ header .socials ul li a:hover {
 }
 
 #projects .container .card1 {
-  background: url(../images/tic_tac_toe.png) center;
+  background: url(../images/weather_app.png) center;
 }
 
 #projects .container .card2 {
-  background: url(../images/restaurant.png) center;
+  background: url(../images/portolfio.png) center;
 }
 
 #projects .container .card3 {
+  background: url(../images/todo_list.png) center;
+}
+
+#projects .container .card4 {
+  background: url(../images/tic_tac_toe.png) center;
+}
+
+#projects .container .card5 {
+  background: url(../images/restaurant.png) center;
+}
+
+#projects .container .card6 {
   background: url(../images/library.png) center;
 }
 
@@ -740,6 +618,50 @@ header .socials ul li a:hover {
   }
   to {
     opacity: 1;
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@-webkit-keyframes nav-links {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@keyframes nav-links {
+  0% {
+    -webkit-transform: translateY(-100%);
+            transform: translateY(-100%);
+  }
+  100% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+  }
+}
+
+@-webkit-keyframes social-links {
+  0% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  100% {
+    -webkit-transform: translateX(0);
+            transform: translateX(0);
+  }
+}
+
+@keyframes social-links {
+  0% {
+    -webkit-transform: translateX(-100%);
+            transform: translateX(-100%);
+  }
+  100% {
     -webkit-transform: translateX(0);
             transform: translateX(0);
   }
