--- a/css/main.css
+++ b/css/main.css
@@ -139,14 +139,12 @@ header .hero p {
 header .hero h1 {
   white-space: nowrap;
   text-align: center;
-  font-size: calc(1.5rem + 4vw);
+  font-size: calc(1.5rem + 3.2vw);
   font-family: "Roboto", sans-serif;
 }
 
 header .hero h1 span {
   color: #7e56e4;
-  -webkit-text-fill-color: transparent;
-  -webkit-text-stroke-width: 0.1px;
 }
 
 header .hero p {
@@ -157,6 +155,7 @@ header .hero p {
   text-align: center;
   width: 80%;
   margin: 0 auto;
+  padding: 0.5rem;
 }
 
 header .hero .hero-btns {
@@ -169,8 +168,8 @@ header .hero .hero-btns a {
   display: inline-block;
   font-family: "Roboto", sans-serif;
   text-decoration: none;
-  padding: 10px 24px;
-  border-radius: 4px;
+  padding: 10px 32px;
+  border-radius: 25px;
   font-size: 1rem;
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
@@ -301,7 +300,7 @@ header .socials ul li a:hover {
   background: #27b868;
 }
 
-#about .container-about p {
+#about .container-about .about-me p {
   margin: 0 auto;
   padding: 2rem 0 5rem 0;
   max-width: 67%;
@@ -338,15 +337,11 @@ header .socials ul li a:hover {
   height: 60%;
 }
 
-#projects {
-  background: #002333;
+#skills .header {
+  padding: 5rem 0 2rem 0;
 }
 
-#projects .showcase {
-  padding-top: 5rem;
-}
-
-#projects .showcase h2 {
+#skills .header h2 {
   font-size: 2.5rem;
   position: relative;
   color: #7e56e4;
@@ -357,7 +352,90 @@ header .socials ul li a:hover {
   margin: 0 auto;
 }
 
-#projects .showcase h2::after {
+#skills .header h2::after {
+  content: "";
+  position: absolute;
+  margin-left: 1rem;
+  top: 50%;
+  width: 20%;
+  height: 3px;
+  background: #27b868;
+}
+
+#skills .container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  width: 80%;
+  margin: 0 auto;
+  display: flex;
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+#skills .container div {
+  background: #181a1b;
+  height: 22rem;
+  width: 18rem;
+  padding: 1rem;
+  margin: 2rem;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
+  -webkit-transition: 0.5s ease;
+  transition: 0.5s ease;
+}
+
+#skills .container div p {
+  font-size: 4rem;
+  padding: 1rem;
+  color: #27b868;
+}
+
+#skills .container div h3 {
+  color: #dddddd;
+  padding-bottom: 1rem;
+}
+
+#skills .container div span {
+  font-size: 1rem;
+  color: #a0a0a0;
+  line-height: 2;
+}
+
+#skills .container div span .iconify {
+  font-size: 1.2rem;
+}
+
+#skills .container div:hover {
+  -webkit-transform: translateY(-5%);
+          transform: translateY(-5%);
+  -webkit-box-shadow: 0 5px #27b868;
+          box-shadow: 0 5px #27b868;
+}
+
+#projects {
+  background: #002333;
+}
+
+#projects .header {
+  padding-top: 5rem;
+}
+
+#projects .header h2 {
+  font-size: 2.5rem;
+  position: relative;
+  color: #7e56e4;
+  font-family: "Roboto", sans-serif;
+  text-transform: capitalize;
+  letter-spacing: 2px;
+  width: 80%;
+  margin: 0 auto;
+}
+
+#projects .header h2::after {
   content: "";
   position: absolute;
   margin-left: 1rem;
@@ -435,7 +513,7 @@ header .socials ul li a:hover {
   font-family: "Lato", sans-serif;
   color: #f9f9f9;
   background: #27b868;
-  border-radius: 4px;
+  border-radius: 25px;
   -webkit-transition: 0.5s ease;
   transition: 0.5s ease;
 }
@@ -475,6 +553,21 @@ header .socials ul li a:hover {
   background: url(../images/library.png) center;
 }
 
+.reveal {
+  position: relative;
+  -webkit-transform: translateY(5rem);
+          transform: translateY(5rem);
+  opacity: 0;
+  -webkit-transition: 1s ease;
+  transition: 1s ease;
+}
+
+.reveal.active {
+  -webkit-transform: translateY(0rem);
+          transform: translateY(0rem);
+  opacity: 1;
+}
+
 #contact {
   background: #181a1b;
   padding: 1.5rem;
@@ -485,7 +578,7 @@ header .socials ul li a:hover {
 #contact .email {
   color: #94a1b2;
   font-family: "Lato", sans-serif;
-  font-size: calc(1rem + 0.4vw);
+  font-size: calc(1.3rem + 0.2vw);
   text-decoration: none;
 }
 
@@ -515,9 +608,7 @@ header .socials ul li a:hover {
     right: 0;
     height: 92vh;
     top: 8vh;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
+    display: block;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
@@ -529,12 +620,10 @@ header .socials ul li a:hover {
             transform: translateX(100%);
     -webkit-transition: 0.5s ease-in;
     transition: 0.5s ease-in;
+    text-transform: uppercase;
   }
   .links li {
     opacity: 0;
-  }
-  .links li a:hover {
-    color: #1d58af;
   }
   .hamburger-menu {
     display: block !important;
@@ -551,8 +640,14 @@ header .socials ul li a:hover {
   #about .container-about .about-me {
     width: 100%;
   }
+  #about .container-about .about-me h2 {
+    width: 50%;
+  }
   #about .container-about .about-me h2::after {
     width: 20%;
+  }
+  #about .container-about .about-me p {
+    width: 50%;
   }
   #about .container-about .student-img {
     width: 100%;
@@ -562,8 +657,11 @@ header .socials ul li a:hover {
     width: 40%;
     height: 40%;
   }
-  #projects #title {
-    width: 66%;
+  #skills .header h2 {
+    width: 50%;
+  }
+  #projects .header h2 {
+    width: 50%;
   }
 }
 
