--- a/css/main.scss
+++ b/css/main.scss
@@ -1,14 +1,27 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Raleway&display=swap");
+
 //////////////////////////////////////// VARIABLES ////////////////////////////////////////
-$white: #f9f9f9;
-$blue: rgb(29, 88, 175);
-$pink: #ff7a8a;
-$green: #27b868;
-$purple: #7e56e4;
-$light-gray: #94a1b2;
-$dark-gray: #181a1b;
-$dark-blue: #002333;
-$roboto: "Roboto", sans-serif;
-$lato: "Lato", sans-serif;
+:root {
+  --red: #f73859;
+  --blue: #0077b5;
+  --gray: rgb(170, 170, 170);
+  --dark-gray: #181a1b;
+  --dark-blue: #002333;
+  --text-color: #fff;
+  --card-background: #2e3031;
+  --skills-span: #b1b1b1;
+  --roboto: "Open Sans", sans-serif;
+  --lato: "Raleway", sans-serif;
+}
+
+.light-mode {
+  --gray: rgb(107, 107, 107);
+  --dark-gray: white;
+  --text-color: #000;
+  --card-background: #e0e0e0;
+  --skills-span: rgb(61, 61, 61);
+}
 
 //////////////////////////////////////// GLOBAL ////////////////////////////////////////
 * {
@@ -30,21 +43,7 @@ html {
 
 body {
   overflow-x: hidden;
-  background: $dark-blue;
-}
-
-// scroll bar
-::-webkit-scrollbar {
-  width: 15px;
-}
-
-::-webkit-scrollbar-track {
-  background: black;
-}
-
-::-webkit-scrollbar-thumb {
-  background: $purple;
-  border-radius: 25px;
+  background: var(--dark-gray);
 }
 
 //////////////////////////////////////// HEADER ////////////////////////////////////////
@@ -57,21 +56,23 @@ header {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    font-family: $roboto;
+    font-family: var(--lato);
     min-height: 8vh;
     animation: nav-links 0.5s;
     .logo {
-      background: $white;
-      padding: 25px;
+      color: var(--text-color);
+      font-size: 1.2rem;
       text-transform: uppercase;
       letter-spacing: 5px;
-      color: $purple;
       transition: 0.3s;
+      span {
+        color: var(--red);
+      }
     }
     .links {
       display: flex;
       justify-content: space-around;
-      width: 500px;
+      width: 50rem;
       max-width: 50%;
       min-width: 30%;
       z-index: 1000;
@@ -79,17 +80,18 @@ header {
         list-style: none;
       }
       a {
-        color: $white;
+        color: var(--text-color);
         text-decoration: none;
         letter-spacing: 2px;
         display: inline-block;
       }
       .link::after {
         content: "";
+        position: relative;
         display: block;
         width: 0;
         height: 2px;
-        background: #02ff74;
+        background: var(--red);
         transition: width 0.3s;
       }
       .link:hover::after {
@@ -100,13 +102,44 @@ header {
       display: none;
       cursor: pointer;
       div {
-        background-color: $white;
+        background-color: var(--text-color);
         transition: 0.5s;
         width: 25px;
         height: 3px;
         margin: 5px;
       }
     }
+  }
+
+  //////////////////////////////////////// DARK MODE TOGGLE ////////////////////////////////////////
+  .color-toggle-label {
+    width: 3rem;
+    height: 1.6rem;
+    border-radius: 25px;
+    background: var(--blue);
+    position: absolute;
+    cursor: pointer;
+    transition: 0.2s ease;
+  }
+
+  .color-toggle {
+    width: 1.2em;
+    height: 1.2em;
+    background: var(--dark-gray);
+    position: absolute;
+    border-radius: 50%;
+    top: 0.18rem;
+    left: 0.18rem;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+
+  #color-toggle-input {
+    display: none;
+  }
+
+  #color-toggle-input:checked ~ label .color-toggle {
+    transform: translateX(1.4rem);
   }
 
   //////////////////////////////////////// HERO SECTION ////////////////////////////////////////
@@ -118,20 +151,20 @@ header {
     transform: translate(-50%, -50%);
     h1,
     p {
-      color: $white;
+      color: var(--text-color);
     }
     h1 {
       white-space: nowrap;
       text-align: center;
       font-size: calc(1.5rem + 3.2vw);
-      font-family: $roboto;
+      font-family: var(--roboto);
       span {
-        color: $purple;
+        color: var(--red);
       }
     }
     p {
-      font-family: $lato;
-      color: $light-gray;
+      font-family: var(--lato);
+      color: var(--gray);
       line-height: 1.6;
       font-size: calc(14px + 0.5vw);
       text-align: center;
@@ -145,7 +178,7 @@ header {
       a {
         margin: 1rem 0.5rem;
         display: inline-block;
-        font-family: $roboto;
+        font-family: var(--roboto);
         text-decoration: none;
         padding: 10px 32px;
         border-radius: 25px;
@@ -155,21 +188,21 @@ header {
         letter-spacing: 1px;
       }
       .about {
-        color: $white;
-        border: 2px solid $green;
+        color: var(--text-color);
+        border: 2px solid var(--red);
       }
       .about:hover {
-        color: $white;
-        background: $green;
+        color: #fff;
+        background: var(--red);
       }
       .projects-btn {
-        color: $white;
-        border: 2px solid $purple;
-        background: $purple;
+        color: #fff;
+        border: 2px solid var(--blue);
+        background: var(--blue);
       }
       .projects-btn:hover {
-        background: $purple;
-        color: $white;
+        background: transparent;
+        color: var(--text-color);
       }
     }
   }
@@ -177,7 +210,7 @@ header {
   //////////////////////////////////////// SOCIAL LINKS ////////////////////////////////////////
   .socials {
     z-index: 100;
-    top: 62%;
+    top: 65%;
     position: absolute;
     left: -8.5rem;
     animation: social-links 0.5s;
@@ -186,8 +219,8 @@ header {
       li {
         a {
           text-decoration: none;
-          color: $white;
-          font-family: $lato;
+          color: #fff;
+          font-family: var(--lato);
           font-size: 1.2rem;
           padding: 1.2rem;
           display: block;
@@ -200,16 +233,16 @@ header {
           }
         }
         .linkedin {
-          background: #0077b5;
+          background: var(--blue);
         }
         .github {
-          background: $dark-gray;
+          background: #2e3031;
         }
         .email {
-          background: $green;
+          background: var(--red);
         }
         .resume {
-          background: $purple;
+          background: #a8026f;
         }
         a:hover {
           transform: translate(120px, 0);
@@ -224,17 +257,25 @@ header {
   position: fixed;
   top: 0;
   width: 100%;
-  background: $purple;
+  background: var(--red);
   transition: 0.3s;
   .logo {
-    color: $white;
-    background: none;
+    color: var(--text-color);
+    span {
+      color: var(--text-color);
+    }
+  }
+  .links {
+    .link::after {
+      background: var(--dark-gray);
+    }
   }
 }
 
 //////////////////////////////////////// ABOUT SECTION ////////////////////////////////////////
 #about {
-  background: $dark-gray;
+  padding: 2rem 0;
+  background: var(--dark-blue);
   .container-about {
     display: flex;
     .about-me {
@@ -242,8 +283,8 @@ header {
       h2 {
         font-size: 2.5rem;
         position: relative;
-        font-family: $roboto;
-        color: $purple;
+        font-family: var(--roboto);
+        color: #fff;
         letter-spacing: 2px;
         padding-top: 5rem;
         width: 66%;
@@ -256,15 +297,16 @@ header {
         margin-left: 1rem;
         width: 35%;
         height: 3px;
-        background: $green;
+        background: var(--red);
       }
       p {
+        font-size: 1.2rem;
         margin: 0 auto;
         padding: 2rem 0 5rem 0;
         max-width: 67%;
-        color: $light-gray;
+        color: rgb(170, 170, 170);
         line-height: 1.7;
-        font-family: $roboto;
+        font-family: var(--roboto);
         text-align: justify;
       }
     }
@@ -286,13 +328,13 @@ header {
 
 //////////////////////////////////////// SKILLS ////////////////////////////////////////
 #skills {
+  padding: 7rem 0;
   .header {
-    padding: 5rem 0 2rem 0;
     h2 {
       font-size: 2.5rem;
       position: relative;
-      color: $purple;
-      font-family: $roboto;
+      color: var(--text-color);
+      font-family: var(--roboto);
       text-transform: capitalize;
       letter-spacing: 2px;
       width: 80%;
@@ -305,7 +347,7 @@ header {
       top: 50%;
       width: 20%;
       height: 3px;
-      background: $green;
+      background: var(--red);
     }
   }
   .container {
@@ -316,29 +358,27 @@ header {
     display: flex;
     justify-content: space-evenly;
     div {
-      background: $dark-gray;
+      background: var(--card-background);
       height: 22rem;
       width: 18rem;
       padding: 1rem;
       margin: 2rem;
       text-align: center;
-      font-family: $roboto;
+      font-family: var(--roboto);
       transition: 0.5s ease;
       p {
         font-size: 4rem;
         padding: 1rem;
-        color: $green;
+        color: var(--red);
       }
       h3 {
-        color: #dddddd;
+        font-size: 1.5rem;
+        color: var(--text-color);
         padding-bottom: 1rem;
       }
       span {
-        // display: flex;
-        // justify-content: center;
-        // align-items: center;
         font-size: 1rem;
-        color: #a0a0a0;
+        color: var(--skills-span);
         line-height: 2;
         .iconify {
           font-size: 1.2rem;
@@ -347,21 +387,21 @@ header {
     }
     div:hover {
       transform: translateY(-5%);
-      box-shadow: 0 5px $green;
+      box-shadow: 0 5px var(--red);
     }
   }
 }
 
 //////////////////////////////////////// FEATURED PROJECTS ////////////////////////////////////////
 #projects {
-  background: $dark-blue;
+  background: var(--dark-blue);
   .header {
-    padding-top: 5rem;
+    padding-top: 7rem;
     h2 {
       font-size: 2.5rem;
       position: relative;
-      color: $purple;
-      font-family: $roboto;
+      color: #fff;
+      font-family: var(--roboto);
       text-transform: capitalize;
       letter-spacing: 2px;
       width: 80%;
@@ -374,14 +414,14 @@ header {
       top: 50%;
       width: 20%;
       height: 3px;
-      background: $green;
+      background: var(--red);
     }
   }
   .container {
     display: flex;
     flex-wrap: wrap;
-    padding: 2rem 0;
-    width: 80%;
+    justify-content: center;
+    width: 50%;
     margin: auto;
     .card {
       display: grid;
@@ -389,9 +429,9 @@ header {
       grid-template-rows: 13rem 13rem 5rem;
       grid-template-areas: "image" "text" "buttons";
       border-radius: 18px;
-      background: $dark-gray;
+      background: var(--dark-gray);
       text-align: center;
-      margin: 2rem auto 4rem auto;
+      margin: 4rem auto 4rem auto;
       .card-img {
         grid-area: image;
         border-top-left-radius: 18px;
@@ -402,13 +442,13 @@ header {
         grid-area: text;
         margin: 1.5rem;
         h2 {
-          font-family: $roboto;
+          font-family: var(--roboto);
           padding: 1rem;
-          color: $white;
+          color: var(--text-color);
         }
         p {
-          color: $light-gray;
-          font-family: $lato;
+          color: var(--gray);
+          font-family: var(--lato);
           line-height: 1.6;
         }
       }
@@ -420,9 +460,9 @@ header {
           padding: 8px 24px;
           outline: none;
           border: none;
-          font-family: $lato;
-          color: $white;
-          background: $green;
+          font-family: var(--lato);
+          color: var(--text-color);
+          background: var(--red);
           border-radius: 25px;
           transition: 0.5s ease;
           i {
@@ -430,8 +470,8 @@ header {
           }
         }
         a:hover {
-          background: $white;
-          color: $green;
+          background: var(--text-color);
+          color: var(--red);
           box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
         }
       }
@@ -440,7 +480,7 @@ header {
       background: url(../images/weather_app.png) center;
     }
     .card2 {
-      background: url(../images/portolfio.png) center;
+      background: url(../images/portfolio.png) center;
     }
     .card3 {
       background: url(../images/todo_list.png) center;
@@ -472,18 +512,77 @@ header {
 
 //////////////////////////////////////// CONTACT ME ////////////////////////////////////////
 #contact {
-  background: $dark-gray;
+  background: var(--dark-gray);
   padding: 1.5rem;
   text-align: center;
   span,
   .email {
-    color: $light-gray;
-    font-family: $lato;
+    color: var(--gray);
+    font-family: var(--lato);
     font-size: calc(1.3rem + 0.2vw);
     text-decoration: none;
   }
   span {
-    color: $purple;
+    color: var(--red);
+  }
+}
+
+//////////////////////////////////////// BACK TO TOP BUTTON ////////////////////////////////////////
+#back-to-top {
+  display: none;
+  position: fixed;
+  bottom: 3%;
+  right: 4%;
+  font-size: 1.5rem;
+  width: 3.5rem;
+  height: 3.5rem;
+  background-color: var(--red);
+  color: var(--text-color);
+  cursor: pointer;
+  border: none;
+  outline: none;
+  border-radius: 50%;
+  transition-duration: 0.2s;
+  transition-timing-function: ease-in-out;
+  transition-property: background-color, color;
+}
+
+#back-to-top:hover,
+#back-to-top:focus {
+  background-color: var(--text-color);
+  color: var(--red);
+}
+
+.btn-entrance {
+  animation-duration: 0.5s;
+  animation-fill-mode: both;
+  animation-name: btn-entrance;
+}
+
+.btn-exit {
+  animation-duration: 0.25s;
+  animation-fill-mode: both;
+  animation-name: btn-exit;
+}
+
+@keyframes btn-entrance {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+  to {
+    opacity: 1;
+    transform: translate3d(0, 0, 0);
+  }
+}
+
+@keyframes btn-exit {
+  from {
+    opacity: 1;
+  }
+  to {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
   }
 }
 
@@ -521,6 +620,14 @@ header {
   }
   .hamburger-menu {
     display: block !important;
+  }
+
+  #back-to-top {
+    bottom: 5%;
+    right: 6%;
+    font-size: 1rem;
+    width: 2.5rem;
+    height: 2.5rem;
   }
 }
 
@@ -579,7 +686,7 @@ header {
 .nav-active {
   z-index: 1000;
   transform: translateX(0%);
-  background: $purple;
+  background: var(--red);
 }
 
 .toggle .line1 {
